# Gateway

./: .gitignore  AGENTS.md  DECISIONS.md  PLAN.md  README.md  SPEC.md  TODO.md  gateway.yaml  pyproject.toml
scripts/: mock-upstream  test
src/gatewaykit/: __init__.py  __main__.py  app.py  config.py  mock_upstream.py  policies.py  proxy.py  routing.py  upstreams.py
tests/: test_app.py  test_config.py  test_main.py  test_mock_upstream.py  test_policies.py  test_proxy.py  test_routing.py  test_upstreams.py
